@@ -1,6 +1,7 @@
 0.32.1
 Use Plexus Classworlds to simplify launcher scripts 
 Switch from org.apache.tools.bzip2 to commons-compress (this project is still alive)
+Removed postgis distribution since it is synched to repo1.maven.org now
 
 0.32
 Change to Public Domain licence.
